--- a/.github/workflows/webUpdate.yml
+++ b/.github/workflows/webUpdate.yml
@@ -16,3 +16,4 @@ jobs:
         ftp-server: ${{ secrets.FTP_HOST }}
         ftp-username: ${{ secrets.FTP_USER }}
         ftp-password: ${{ secrets.FTP_PASSWORD }}
+        git-ftp-args: --insecure
